--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,5 +12,6 @@ jobs:
               run: docker build ./ -t potenselit/er-app-ui:latest
             - name: push image to docker hub
               run: |
+                docker login -u potenselit -p ${{ secrets.DOCKER_HUB_TOKEN }}
                 docker push potenselit/er-app-ui:latest
 
